force-app/main/default/objects/ReferralRecommendation__c/ReferralRecommendation__c.object-meta.xml
<CustomObject>
    <description>This object stores the information which would be received from the external system.</description>
    <label>Referral Recommendation</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>ReferralRecommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Recommendations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>