force-app/main/default/objects/ReferralRecommendation__c/fields/LocationResource__c.field-meta.xml
<CustomField>
    <fullName>LocationResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Resource</label>
    <referenceTo>LocationResource__c</referenceTo>
    <relationshipLabel>Referral Recommendations</relationshipLabel>
    <relationshipName>Referral_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>