force-app/main/default/objects/ReferralRecommendation__c/fields/UserId_ExtId__c.field-meta.xml
<CustomField>
    <fullName>UserId_ExtId__c</fullName>
    <description>Salesforce user id stored as external id.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UserId ExtId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>